@@ -24,54 +24,70 @@ public class TextConsole implements ConsoleProxy
          boolean ast   = false;
          boolean eval  = false;
          boolean expr  = false;
+         boolean prof  = false;
+         boolean time  = false;
          int     start = 0;
 
-         if (args[0].equals("-version") || args[0].equals("--version") || args[0].equals("-v"))
+         while (start < args.length && (args[start].startsWith("--") || (args[start].length() >= 2 && args[start].charAt(0) == '-')))
          {
-             System.out.println(SleepUtils.SLEEP_VERSION + " (" + SleepUtils.SLEEP_RELEASE + ")");
-             return;
-         } 
-         else if (args[0].equals("-help") || args[0].equals("--help") || args[0].equals("-h"))
-         {
-             System.out.println(SleepUtils.SLEEP_VERSION + " (" + SleepUtils.SLEEP_RELEASE + ")");
-             System.out.println("Usage: java [properties] -jar sleep.jar [options] [-|file|expression]");
-             System.out.println("       properties:");
-             System.out.println("         -Dsleep.assert=<true|false>");
-             System.out.println("         -Dsleep.classpath=<path to locate 3rd party jars from>");
-             System.out.println("         -Dsleep.debug=<debug level>");
-             System.out.println("       options:");
-             System.out.println("         -a --ast       display the abstract syntax tree of the specified script");
-             System.out.println("         -c --check     check the syntax of the specified file");
-             System.out.println("         -e --eval      evaluate a script as specified on command line");
-             System.out.println("         -h --help      display this help message");
-             System.out.println("         -v --version   display version information");
-             System.out.println("         -x --expr      evaluate an expression as specified on the command line");
-             System.out.println("       file:");
-             System.out.println("         specify a '-' to read script from STDIN");
-             return;
-         }
-         else if (args[0].equals("--check") || args[0].equals("-c"))
-         {
-             start = 1;
-             check = true;
-         }
-         else if (args[0].equals("--ast") || args[0].equals("-a"))
-         {
-             start = 1;
-             ast   = true;
-         }
+            if (args[start].equals("-version") || args[start].equals("--version") || args[start].equals("-v"))
+            {
+                System.out.println(SleepUtils.SLEEP_VERSION + " (" + SleepUtils.SLEEP_RELEASE + ")");
+                return;
+            } 
+            else if (args[start].equals("-help") || args[start].equals("--help") || args[start].equals("-h"))
+            {
+                System.out.println(SleepUtils.SLEEP_VERSION + " (" + SleepUtils.SLEEP_RELEASE + ")");
+                System.out.println("Usage: java [properties] -jar sleep.jar [options] [-|file|expression]");
+                System.out.println("       properties:");
+                System.out.println("         -Dsleep.assert=<true|false>");
+                System.out.println("         -Dsleep.classpath=<path to locate 3rd party jars from>");
+                System.out.println("         -Dsleep.debug=<debug level>");
+                System.out.println("       options:");
+                System.out.println("         -a --ast       display the abstract syntax tree of the specified script");
+                System.out.println("         -c --check     check the syntax of the specified file");
+                System.out.println("         -e --eval      evaluate a script as specified on command line");
+                System.out.println("         -h --help      display this help message");
+                System.out.println("         -p --profile   collect and display runtime profile statistics");
+                System.out.println("         -t --time      display total script runtime");
+                System.out.println("         -v --version   display version information");
+                System.out.println("         -x --expr      evaluate an expression as specified on the command line");
+                System.out.println("       file:");
+                System.out.println("         specify a '-' to read script from STDIN");
+                return;
+             }
+             else if (args[start].equals("--check") || args[start].equals("-c"))
+             {
+                check = true;
+             }
+             else if (args[start].equals("--ast") || args[start].equals("-a"))
+             {
+                ast   = true;
+             }
+             else if (args[start].equals("--profile") || args[start].equals("-p"))
+             {
+                prof  = true;
+             }
+             else if (args[start].equals("--time") || args[start].equals("-t"))
+             {
+                time  = true;
+             }
+             else if (args[start].equals("--eval") || args[start].equals("-e"))
+             {
+                eval  = true;
+             }
+             else if (args[start].equals("--expr") || args[start].equals("-x"))
+             {
+                expr  = true;
+             }
+             else
+             {
+                System.err.println("Unknown argument: " + args[start]);
+                return;
+             }
 
-         if (args[start].equals("--eval") || args[start].equals("-e"))
-         {
              start++;
-             eval  = true;
          }
-         else if (args[start].equals("--expr") || args[start].equals("-x"))
-         {
-             start++;
-             expr  = true;
-         }
-         
          //
          // put all of our command line arguments into an array scalar
          //
@@ -110,6 +126,11 @@ public class TextConsole implements ConsoleProxy
             {
                script.setDebugFlags(Integer.parseInt(System.getProperty("sleep.debug")));
             }
+          
+            if (prof)
+            {
+               script.setDebugFlags(script.getDebugFlags() | 24);
+            }
 
             if (check)
             {
@@ -121,7 +142,20 @@ public class TextConsole implements ConsoleProxy
             } 
             else
             {
+               long beganAt = System.currentTimeMillis();
+
                script.runScript();                                     // run the script...
+
+               if (prof)
+               {
+                  script.printProfileStatistics(System.out);
+               }
+
+               if (time)
+               {
+                   long difference = System.currentTimeMillis() - beganAt;
+                   System.out.println("time: " + (difference / 1000.0) + "s");
+               }
             }
          }
          catch (YourCodeSucksException yex)
